src/test/deca/syntax/invalid/simple_lex.deca
// Description:
//    tests de programme lexicalement correct.
//
// Resultats:
//    Erreur syntaxique 
//    Ligne 8 : no viable alternative at input 'idf'

idf _autre_idf
{
}
(
)
// un commentaire.
